--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Nick Frattaroli",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "7.0.0",
+    "inquirer": "^7.0.0",
+    "mysql": "^2.17.1",
     "promise-mysql": "^4.1.1"
   },
   "devDependencies": {
